# openvino.genai

.github/workflows/: causal_lm_cpp.yml  lcm_dreamshaper_cpp.yml  linux.yml  mac.yml  stable_diffusion_1_5_cpp.yml  windows.yml
image_generation/common/diffusers/: CMakeLists.txt
image_generation/common/diffusers/include/: scheduler.hpp  scheduler_lcm.hpp  scheduler_lms_discrete.hpp
image_generation/common/diffusers/include/diffusers/: autoencoder_kl.hpp  clip_text_model.hpp  scheduler.hpp  stable_diffusion_pipeline.hpp  text2image_pipeline.hpp  unet2d_condition_model.hpp
image_generation/common/diffusers/src/: autoencoder_kl.hpp  clip_text_model.hpp  diffusion_pipeline.hpp  iadapted_model.hpp  lora.cpp  scheduler.cpp  scheduler_lcm.cpp  scheduler_lcm.hpp  scheduler_lms_discrete.cpp  scheduler_lms_discrete.hpp  stable_diffusion_pipeline.cpp  stable_diffusion_pipeline.hpp  text2image_pipeline.cpp  types.cpp  types.hpp  unet2d_condition_model.hpp
image_generation/common/diffusers/src/schedulers/: ischeduler.hpp  lcm.cpp  lcm.hpp  lms_discrete.cpp  lms_discrete.hpp  scheduler.cpp  types.cpp  types.hpp
image_generation/lcm_dreamshaper_v7/cpp/: CMakeLists.txt
image_generation/lcm_dreamshaper_v7/cpp/src/: main.cpp
image_generation/stable_diffusion_1_5/cpp/: CMakeLists.txt  README.md
image_generation/stable_diffusion_1_5/cpp/src/: main.cpp
samples/: CMakeLists.txt  requirements.txt
samples/cpp/prompt_lookup_decoding_lm/: CMakeLists.txt
samples/cpp/speculative_decoding_lm/: CMakeLists.txt
samples/cpp/stable_diffusion/: main.cpp
samples/cpp/stable_diffusion_1_5/: main.cpp
src/cpp/include/openvino/genai/: generation_config.hpp  text2image_pipeline.hpp  tokenizer.hpp
src/cpp/src/: generation_config.cpp  llm_pipeline_static.hpp  tokenizer.cpp  utils.hpp
src/cpp/src/text2image/: diffusion_pipeline.hpp  stable_diffusion_pipeline.hpp  text2image_pipeline.cpp
src/cpp/src/text2image/models/: autoencoder_kl.cpp  autoencoder_kl.hpp  clip_text_model.cpp  clip_text_model.hpp  unet2d_condition_model.cpp  unet2d_condition_model.hpp
src/cpp/src/text2image/schedulers/: ischeduler.hpp  lcm.cpp  lms_discrete.cpp  scheduler.cpp  (+1 more)
